Make sure to add the change to the docker images as well